fixed name overflow and page overflow

--- a/styles/candidate.module.css
+++ b/styles/candidate.module.css
@@ -143,8 +143,8 @@
 }
 
 .application {
-  grid-row: 1/2;
-  grid-column: 2/4;
+  grid-row: 3/4;
+  grid-column: 1/3;
   border-radius: 20px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
@@ -152,11 +152,18 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.name {
+  max-width: 100vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 40px !important;
 }
 
 .website {
-  grid-row: 2/3;
-  grid-column: 2/4;
+  grid-row: 4/5;
+  grid-column: 1/3;
   border-radius: 20px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
@@ -166,12 +173,13 @@
   align-items: center;
 }
 
-.application:hover {
+.application:hover,
+.website:hover {
   cursor: pointer;
   background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) {
   .back {
     position: absolute;
     margin-left: 20px;
